@@ -1,3 +1,8 @@
+2024-02-20 Gabriele Gorla <gorlik@yahoo.com>
+
+	* src/mos6502/gen.c:
+	  Renamed jflag in genIfxJump from "a" to "z".
+	
 2024-02-19 Gabriele Gorla <gorlik@yahoo.com>
 
 	* src/mos6502/gen.c:
